# Tax-JIKIMI

./: .gitignore  LICENSE
backend/: auth.py  db.py  main.py  pyproject.toml  requirements.txt  run_backend_check.py  taxguard_calculation_logic.py
backend/rag/: __init__.py  build_index.py  embedding.py  loader.py  retriever.py
backend/rag/sources/: README.md  금융소득종합과세여부.txt  연금소득_종합과세여부.txt  연금소득공제.txt  연금소득세율.txt  연금소득종합과세.txt  연금수령_세율.txt  연금외수령_세율.txt  절세한도_ISA_연금저축_IRP.txt
backend/tests/: test_backend.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatWidget.jsx  DiagnosisForm.jsx  ReportDownload.jsx  ReportSummary.jsx  ShieldIcon.jsx  SummaryCards.jsx  TabNav.jsx
frontend/src/components/tabs/: FinancialIncomeTab.jsx  LimitUsageTab.jsx  PensionCompareTab.jsx  PensionTimingTab.jsx  RecommendationsTab.jsx
frontend/src/utils/: chatEntityExtract.js  errors.js  format.js
