[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "openai>=2.45.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "uvicorn[standard]>=0.51.0",
]
